# frosty

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  __init__.py  buckets.py  checkpoint.py  client.py  config.py  docker-compose.yml  elastic.py  errors.py  ingest.py  journal.py  pyproject.toml
api/: app.py  jobs.py  main.py  schemas.py
frosty/: deploy_pipelines.py  event_types.py  models.py  pipelines.py  worker.py
frosty/api/: __init__.py  apm.py  serializers.py
frosty/splunk_journal/: __init__.py  decoder.py  stream.py
pipelines/: frosty-pipeline-apache.json  frosty-pipeline-nginx.json  frosty-pipeline-syslog.json
scripts/: benchmark_bulk_phases.py  hourly-ingest.sh
tests/: test_api_phase1.py  test_apm_auth.py  test_bucket_phase_metrics.py  test_concurrency_hardening.py  test_decoder_integration.py  test_ingest_cli.py  test_iteration_store.py  test_phase2.py  test_phase4.py  test_pipeline_setup.py  test_review_1_6.py  test_skip_metadata.py
